2005-12-17  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate/src/ipmi-locate.c: Fixed a bug which uses
	unallocated memory.

2005-12-17  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate/ipmi-locate.8: Added man page.

2005-12-17  A Balamurugan  <bala@zresearch.com>

	* ipmi-locate: New tool to probe and display ipmi devices.

	* configure.ac: Updated.

	* Makefile.am: Updated.

2005-12-17  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-interface.c
	(ipmi_open_inband,ipmi_cmd,ipmi_cmd_raw,ipmi_inband_close): Added
	SSIF inband support in UDM.

	* libfreeipmi/src/ipmi-ssif-interface.c
	(ipmi_ssif_cmd2,ipmi_ssif_cmd_raw2): Added functions.

2005-12-16  A Balamurugan  <bala@zresearch.com>

	* fish/src/fish-argp.c (fi_set_arguments): new function.

	* fish/src/ipmi-wrapper.c (get_ipmi_host_ip_address): Improved.

	* fish/src/scm-procedures.c (ex_ipmi_open): Improved.

2005-12-16  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_cmd2): added
	debugging code when invalid packet data is received.

2005-12-16  Anand Babu  <ab@zresearch.com>

	* lot of .c,.h files: Applying Anand Avati's <avati@zresearch.com>
	patch for ISO C99: 7.18 Integer types <stdint.h> compliance. This
	also closes Bastian Blank <waldi@debian.org>'s bug #11210
	overview: Uses nonstandard datatypes.

2005-12-14  A Balamurugan  <bala@zresearch.com>

	* fish/extensions/bc-common.scm: Fixed command line argument
	parsing bug.

	* fish/extensions/bmc-info.scm: like wise.

	* fish/extensions/pef.scm: like wise.

	* fish/extensions/sel.scm: like wise.

	* fish/extensions/sensors-common.scm: like wise.

	* libfreeipmi/src/ipmi-sensor-event-messages.c
	(get_01_generic_event_message, get_02_generic_event_message,
	get_03_generic_event_message, get_04_generic_event_message,
	get_05_generic_event_message, get_06_generic_event_message,
	get_07_generic_event_message, get_08_generic_event_message,
	get_09_generic_event_message, get_0A_generic_event_message,